<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/orange"
        tools:context=".login.LoginActivity">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constainProgress"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">

        <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/indicator"
                android:layout_gravity="center"
                app:indicatorName="BallPulseIndicator"
                style="@style/AVLoadingIndicatorView"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>




    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

        <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical">


        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/welcome"
                  android:fontFamily="@font/calibri"
                  android:textColor="@color/white"
                  android:textStyle="bold"
                  android:layout_marginTop="50dp"
                  android:textSize="40sp"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/back"
                  android:textStyle="bold"
                  android:fontFamily="@font/calibri"
                  android:textColor="@color/white"
                  android:textSize="40sp"
        />

    </LinearLayout>




    <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_marginTop="70dp"
            app:cardElevation="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="fill_parent">



        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/please_sign_in"
                      android:paddingStart="10dp"
                      android:layout_marginTop="30dp"
                      android:textStyle="bold"
                      android:fontFamily="@font/calibri"
                      android:textSize="30sp" tools:ignore="RtlSymmetry"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:ems="10"
                    android:text="wir-group@mail.co"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/calibri"
                    android:paddingStart="20dp"
                    android:background="@drawable/edt_background_white_rounded"
                    android:id="@+id/edtNameLogin" tools:ignore="RtlSymmetry"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:text="secret"
                    android:hint="@string/password"
                    android:fontFamily="@font/calibri"
                    android:paddingStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edt_background_white_rounded"
                    android:id="@+id/edtPassLogin" tools:ignore="RtlSymmetry"/>
            <Button
                    android:text="@string/sign_in"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/calibri"
                    android:textStyle="bold"
                    android:background="@color/orange"
                    android:shadowRadius="10"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSigninLogin"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/sign_up"
                      android:paddingStart="10dp"
                      android:layout_marginTop="30dp"
                      android:textColor="@color/orange"
                      android:textAlignment="center"
                      android:id="@+id/tvSignUpLogin"
                      android:fontFamily="@font/calibri"
                      android:textSize="24sp" tools:ignore="RtlSymmetry"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


        </LinearLayout>

</ScrollView>

</LinearLayout>