<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        tools:context=".register.RegisterActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign up"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="150dp"
                android:fontFamily="@font/calibri"/>


        <android.support.v7.widget.CardView
                app:cardElevation="10dp"
                android:id="@+id/cvSignup"
                android:elevation="8dp"
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                tools:targetApi="lollipop">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:orientation="vertical">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:background="@drawable/edt_background_white_rounded"
                    android:ems="10"
                    android:layout_marginTop="20dp"
                    android:paddingStart="20dp"
                    android:id="@+id/edtNameSignup"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:paddingStart="20dp"
                    android:hint="@string/email"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edt_background_white_rounded"
                    android:id="@+id/edtEmailSignUp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_marginTop="20dp"
                    android:paddingStart="20dp"
                    android:hint="@string/password"
                    android:background="@drawable/edt_background_white_rounded"
                    android:id="@+id/edtPassSignUp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="Confirm password"
                    android:paddingStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edt_background_white_rounded"
                    android:id="@+id/edtCPassSignUp"/>
                <Button
                        android:text="Sign up"
                        android:layout_marginTop="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/orange"
                        android:layout_marginBottom="50dp"
                        android:textColor="@color/white"
                        android:id="@+id/btnSignup"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>